--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "mongodb": "^3.6.4",
     "nodemon": "^2.0.7",
     "slug": "^4.0.2"
   }
