--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongodb": "^3.6.4",
+    "mongoose": "^5.11.18",
     "nodemon": "^2.0.7",
     "slug": "^4.0.2"
   }
